--- a/Neural_Style_Transfer/26_Neural_Style_Transfer.ipynb
+++ b/Neural_Style_Transfer/26_Neural_Style_Transfer.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "- The paper uses the VGG19 model\n",
     "\n",
-    "![VGG19](vgg19.png)\n",
+    "![VGG19](assets/vgg19.png)\n",
     "\n",
     "- what we will do is to take that model and freeze all of it, we will pass the content image, the style image and a random image through the model, then we will calculate the content loss (the difference between the content image and the random image) and the style loss (the difference between the style image and the random image), then we use these losses to update the random image to minimize the content and style losses.\n",
     "    - the content loss is designed so that the random image will have the same content as the content image\n",
